<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--Logout-->
    <item
        android:id="@+id/main_menu_item_logout"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/text_logout"
        app:showAsAction="ifRoom" />
    <!--Profile-->
    <item
        android:id="@+id/main_menu_item_profile"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom" />
    <!--Search posts-->
    <item
        android:id="@+id/main_menu_item_search_posts"
        android:icon="@drawable/ic_search_24"
        android:title="@string/text_search_posts"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <!--Users-->
    <item
        android:id="@+id/main_menu_item_users"
        android:icon="@drawable/ic_users_24"
        android:title="@string/text_users"
        app:showAsAction="ifRoom" />
</menu>