<resources>
    <string name="app_name">Blog</string>

    <!--images-->
    <string name="app_logo">app logo</string>
    <string name="login_logo_placeholder">placeholder</string>

    <!--buttons-->
    <string name="fab_add_post">Add Blog Post</string>
    <string name="button_login">Sign In</string>
    <string name="button_register">Register</string>
    <string name="button_guest">Continue as guest</string>
    <string name="button_save">Save</string>
    <string name="button_update">Update</string>

    <!--menu items-->
    <string name="add_post">Add Post</string>
    <string name="log_out">Log Out</string>
    <string name="user_settings">Settings</string>

    <!--content descriptions-->
    <string name="description_image_logo">Image logo</string>
    <string name="description_blog_post_image">Blog post image</string>
    <string name="description_user_image">User Account Image</string>
    <string name="description_change_username">Change username</string>
    <string name="description_change_email">Change e-mail</string>
    <string name="description_thumb_up">Thumb Up</string>
    <string name="description_thumb_down">Thumb Down</string>
    <string name="description_delete_blog_post">Delete Blog Post</string>

    <!--input hints-->
    <string name="hint_username">username</string>
    <string name="hint_email">e-mail address</string>
    <string name="hint_password">password</string>
    <string name="hint_confirm_password">confirm password</string>
    <string name="hint_enter_title_here">enter title here</string>
    <string name="hint_enter_details_here">enter details here</string>
    <string name="hint_new_username">choose new username</string>
    <string name="hint_new_email">choose new e-mail address</string>
    <string name="hint_new_password">choose new password</string>

    <!--toast messages-->
    <string name="toast_empty_username">Username cannot be empty.</string>
    <string name="toast_empty_email">E-mail cannot be empty.</string>
    <string name="toast_empty_password">Password cannot be empty.</string>
    <string name="toast_empty_password_confirm">Please, confirm your password.</string>
    <string name="toast_failed_password_confirm">Password confirmation failed.</string>
    <string name="toast_registration_failed">User registration failed.</string>
    <string name="toast_welcome">Welcome, </string>
    <string name="toast_wrong_credentials">User login failed. Please, check your credentials and try again.</string>
    <string name="toast_login_successful">Login successful.</string>
    <string name="toast_login_guest">Continue as guest.</string>
    <string name="toast_empty_post_title">Please, enter post title.</string>
    <string name="toast_empty_post_details">Please, enter post details.</string>
    <string name="toast_user_must_authenticate">Please, login and/or register to post.</string>
    <string name="toast_user_settings_updated">User setting updated..</string>
</resources>