<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_activity_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.UserActivity">

    <!--Placeholder for the other users of the application, except current-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_users"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>